--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Komik Comeback</title>
 </head>
+
 <body>
-    <h2>Hello, World!</h2>
+    <header>Ini Header</header>
+
+    <main>
+        <h2>Hello, World!</h2>
+    </main>
+
+    <footer>Ini Footer</footer>
 </body>
+
 </html>
